# mapstitch

./: CMakeLists.txt  package.xml
include/mapstitch/: mapstitch.h  utils.h
src/: main.cpp  mapstitch.cpp  rosmain.cpp
