<?xml version="1.0"?>
<package>
  <name>mapstitch</name>
  <version>0.0.0</version>
  <description>mapstitch

    A ROS Component and command line tool to align the current 2D /map or an
    image of a map to a previously saved map. The map to align to is assumed to
    be a .pgm created by the map_saver component (but other may work too). There
    are no additional sanity checks like matching resolution of the supplied
    maps.

    The estimated transform (with
    3 DOF, rotation and translation) is either published as tf between the
    /world and /map frame, returned on the command line or saved as a stitched
    image.

  </description>
  <maintainer email="j.seibert@campus.tu-berlin.de">Jacob Seibert</maintainer>
  <author>Philipp M. Scholl</author>
  <license>BSD</license>

  <url>http://ros.org/wiki/mapstitch</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  
  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>
</package>
